# apps/backend/internal/model/todo/dto.go
@@ -118,3 +118,40 @@ type GetTodoStatsPayload struct{}
 func (p *GetTodoStatsPayload) Validate() error {
 	return nil
 }
+
+// ------------------------------------------------------------
+// Todo Attachment DTOs
+// ------------------------------------------------------------
+
+type UploadTodoAttachmentPayload struct {
+	TodoID uuid.UUID `param:"id" validate:"required,uuid"`
+}
+
+func (p *UploadTodoAttachmentPayload) Validate() error {
+	validate := validator.New()
+	return validate.Struct(p)
+}
+
+// ------------------------------------------------------------
+
+type DeleteTodoAttachmentPayload struct {
+	TodoID       uuid.UUID `param:"id" validate:"required,uuid"`
+	AttachmentID uuid.UUID `param:"attachmentId" validate:"required,uuid"`
+}
+
+func (p *DeleteTodoAttachmentPayload) Validate() error {
+	validate := validator.New()
+	return validate.Struct(p)
+}
+
+// ------------------------------------------------------------
+
+type GetAttachmentPresignedURLPayload struct {
+	TodoID       uuid.UUID `param:"id" validate:"required,uuid"`
+	AttachmentID uuid.UUID `param:"attachmentId" validate:"required,uuid"`
+}
+
+func (p *GetAttachmentPresignedURLPayload) Validate() error {
+	validate := validator.New()
+	return validate.Struct(p)
+}
